--- a/wandb/sdk/launch/deploys/gcp-vertex/launch-agent.yaml
+++ b/wandb/sdk/launch/deploys/gcp-vertex/launch-agent.yaml
@@ -36,18 +36,18 @@ spec:
                   name: wandb-api-key
                   key: password
             - name: GOOGLE_APPLICATION_CREDENTIALS
-              value: /secret/kaniko-secret.json
+              value: /secret/credentials.json
           volumeMounts:
             - name: wandb-launch-config
               mountPath: /home/launch_agent/.config/wandb
               readOnly: true
-            - name: kaniko-secret
+            - name: gcp-credentials
               mountPath: /secret
               readOnly: true
       volumes:
         - name: wandb-launch-config
           configMap:
             name: wandb-launch-configmap
-        - name: kaniko-secret
+        - name: gcp-credentials
           secret:
-            secretName: kaniko-secret
+            secretName: gcp-credentials
