fix(sdk): allow users to provide path to custom executables (#4604)
* use shutil to get executable

* remove pex from executables

* pass executable

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -366,7 +366,7 @@ jobs:
           no_output_timeout: 5m
           command: |
             pex . -o wandb.pex
-            ./wandb.pex -c "import wandb; wandb.init(mode='offline'); wandb.finish()"
+            WANDB_EXECUTABLE=./wandb.pex ./wandb.pex -c "import wandb; import os; wandb.init(mode='offline'); wandb.finish()"
       - save-test-results
 
   protobuf-compatability:
