--- a/tox.ini
+++ b/tox.ini
@@ -15,7 +15,7 @@ envlist=
 
 [base]
 setenv =
-    YEA_WANDB_VERSION = 0.8.14
+    YEA_WANDB_VERSION = 0.9.0
 
 [unitbase]
 deps =
@@ -420,10 +420,7 @@ deps =
     -r{toxinidir}/requirements.txt
     func-s_{base,metaflow}-py{36,37,38,39,310}: -r{toxinidir}/requirements_dev.txt
     pytest-mock
-    git+https://github.com/wandb/yea@mitm-1#egg=yea
-    git+https://github.com/wandb/yea-wandb@mitm-1#egg=yea_wandb
-    # yea-wandb=={env:YEA_WANDB_VERSION}
-    # bump2
+    yea-wandb=={env:YEA_WANDB_VERSION}
 extras =
     func-s_service-py{36,37,38,39,310}: service
     func-s_grpc-py{36,37,38,39,310}: grpc
@@ -519,9 +516,7 @@ deps =
     -r{toxinidir}/requirements.txt
     standalone-{cpu,gpu,tpu,local}-py{36,37,38,39,310}: -r{toxinidir}/requirements_dev.txt
     pytest-mock
-    https://github.com/wandb/yea/archive/mitm-1.zip
-    https://github.com/wandb/yea-wandb/archive/mitm-1.zip
-    # yea-wandb=={env:YEA_WANDB_VERSION}
+    yea-wandb=={env:YEA_WANDB_VERSION}
 whitelist_externals =
     date
     echo
