feat(sdk): use transaction log to cap memory usage (#4724)

--- a/tox.ini
+++ b/tox.ini
@@ -15,7 +15,9 @@ envlist=
 
 [base]
 setenv =
-    YEA_WANDB_VERSION = 0.8.14
+    YEA_WANDB_VERSION = 0.9.0
+    ; Setting low network buffer so that we exercise flow control logic
+    WANDB__NETWORK_BUFFER = 1000
 
 [unitbase]
 deps =
