--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -17,8 +17,8 @@ ipykernel
 nbclient
 scikit-learn
 tensorflow>=1.15.2; sys_platform != 'darwin'
-tensorflow>=1.15.2; python_version > '3.6' and sys_platform == 'darwin' and platform.machine != 'arm64'
-tensorflow-macos; python_version > '3.6' and python_version < '3.10' and sys_platform == 'darwin' and platform.machine == 'arm64'
+tensorflow>=1.15.2; sys_platform == 'darwin' and platform.machine != 'arm64'
+tensorflow-macos; python_version < '3.10' and sys_platform == 'darwin' and platform.machine == 'arm64'
 torch
 torchvision
 plotly
@@ -29,8 +29,7 @@ stable_baselines3
 tensorboard
 gym
 jax[cpu]; sys_platform == 'darwin' or sys_platform == 'linux'
-fastcore; python_version > '3.6'
-fastcore==1.3.29; python_version == '3.6'
+fastcore
 pyarrow
 metaflow>=2.3.5
 xgboost
