--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@ envlist=
     mypy,
     flake8,
     docstrings,
-    py{36,37,38,39,launch,launch38},
+    py{37,38,39,launch,launch38},
     func-s_{base,sklearn,metaflow,tf115,tf21,tf24,tf25,tf26,ray112,ray2,service,docs,
             imports{1,2,3,4,5,6,7,8,9,10,11,12},noml,grpc}-py37,
     standalone-{cpu,gpu,tpu,local}-py38,
@@ -41,19 +41,19 @@ deps =
     bokeh             # TODO: remove after conftest.py refactor
     nbclient          # TODO: remove after conftest.py refactor
 
-[testenv:py{36,37,38,39,310,launch,launch38}]
+[testenv:py{37,38,39,310,launch,launch38}]
 deps =
     {[unitbase]deps}
     -r{toxinidir}/requirements_dev.txt
 install_command =
-    py{36,37,38,39,launch,launch38}: pip install --timeout 600 --extra-index-url https://download.pytorch.org/whl/cpu {opts} {packages}
+    py{37,38,39,launch,launch38}: pip install --timeout 600 --extra-index-url https://download.pytorch.org/whl/cpu {opts} {packages}
 passenv =
     USERNAME
     CI_PYTEST_SPLIT_ARGS
     CI_PYTEST_PARALLEL
     CI
 setenv =
-    py{36,37,38,39,310,launch,launch38}: COVERAGE_FILE={envdir}/.coverage
+    py{37,38,39,310,launch,launch38}: COVERAGE_FILE={envdir}/.coverage
     py{37,39}: WINDIR=C:\\Windows
 # Pytorch installations on non-darwin need the `-f`
 whitelist_externals =
@@ -61,11 +61,11 @@ whitelist_externals =
     bash
 commands =
     mkdir -p test-results
-    py{36,37,38,39,310}:     python -m pytest {env:CI_PYTEST_SPLIT_ARGS:} -n={env:CI_PYTEST_PARALLEL:10} --durations=20 --reruns 3 --reruns-delay 1 --junitxml=test-results/junit.xml --cov-config=.coveragerc --cov --cov-report= --no-cov-on-fail {posargs:tests/}
+    py{37,38,39,310}:     python -m pytest {env:CI_PYTEST_SPLIT_ARGS:} -n={env:CI_PYTEST_PARALLEL:10} --durations=20 --reruns 3 --reruns-delay 1 --junitxml=test-results/junit.xml --cov-config=.coveragerc --cov --cov-report= --no-cov-on-fail {posargs:tests/}
     pylaunch:                python -m pytest {env:CI_PYTEST_SPLIT_ARGS:} -n={env:CI_PYTEST_PARALLEL:4} --durations=20 --reruns 3 --reruns-delay 1 --junitxml=test-results/junit.xml --cov-config=.coveragerc --cov --cov-report= --no-cov-on-fail {posargs:tests/unit_tests_old/tests_launch/}
     pylaunch38:              python -m pytest {env:CI_PYTEST_SPLIT_ARGS:} -n={env:CI_PYTEST_PARALLEL:4} --durations=20 --reruns 3 --reruns-delay 1 --junitxml=test-results/junit.xml --cov-config=.coveragerc --cov --cov-report= --no-cov-on-fail {posargs:tests/unit_tests/tests_launch/}
 
-[testenv:unit-s_nb-py{36,37,38,39,310}]
+[testenv:unit-s_nb-py{37,38,39,310}]
 deps =
     {[unitshardbase]deps}
     s_nb: ipython
@@ -74,7 +74,7 @@ deps =
 whitelist_externals =
     mkdir
 setenv =
-    py{36,37,38,39,310,launch,launch38}: COVERAGE_FILE={envdir}/.coverage
+    py{37,38,39,310,launch,launch38}: COVERAGE_FILE={envdir}/.coverage
     py{37}: WINDIR=C:\\Windows
     s_nb: WB_UNIT_SHARD=s_nb
 passenv =
@@ -407,7 +407,7 @@ commands =
     cp .coverage coverage.xml cover-results/
     coverage report -m --ignore-errors --skip-covered --omit "wandb/vendor/*"
 
-[testenv:func-s_{base,sklearn,metaflow,tf115,tf21,tf24,tf25,tf26,ray112,ray2,service,py310,docs,imports1,imports2,imports3,imports4,imports5,imports6,imports7,imports8,imports9,imports10,imports11,imports12,noml,grpc,kfp}-{py36,py37,py38,py39,py310}]
+[testenv:func-s_{base,sklearn,metaflow,tf115,tf21,tf24,tf25,tf26,ray112,ray2,service,py310,docs,imports1,imports2,imports3,imports4,imports5,imports6,imports7,imports8,imports9,imports10,imports11,imports12,noml,grpc,kfp}-{py37,py38,py39,py310}]
 install_command = pip install --extra-index-url https://download.pytorch.org/whl/cpu {opts} {packages}
 commands_pre =
 setenv =
@@ -420,43 +420,43 @@ passenv =
     CI_PYTEST_SPLIT_ARGS
 deps =
     -r{toxinidir}/requirements.txt
-    func-s_{base,metaflow}-py{36,37,38,39,310}: -r{toxinidir}/requirements_dev.txt
+    func-s_{base,metaflow}-py{37,38,39,310}: -r{toxinidir}/requirements_dev.txt
     pytest-mock
     yea-wandb=={env:YEA_WANDB_VERSION}
 extras =
-    func-s_service-py{36,37,38,39,310}: service
-    func-s_grpc-py{36,37,38,39,310}: grpc
+    func-s_service-py{37,38,39,310}: service
+    func-s_grpc-py{37,38,39,310}: grpc
 whitelist_externals =
     mkdir
 commands =
     mkdir -p test-results
-    func-s_base-py{36,37,38,39,310}: yea {env:CI_PYTEST_SPLIT_ARGS:} --strict --shard default run {posargs:--all}
-    func-s_sklearn-py{36,37,38,39,310}: yea {env:CI_PYTEST_SPLIT_ARGS:} --strict --shard sklearn run {posargs:--all}
-    func-s_metaflow-py{36,37,38,39,310}: yea {env:CI_PYTEST_SPLIT_ARGS:} --strict --shard metaflow run {posargs:--all}
-    func-s_tf115-py{36,37,38,39,310}: yea {env:CI_PYTEST_SPLIT_ARGS:} --strict --shard tf115 run {posargs:--all}
-    func-s_tf21-py{36,37,38,39,310}: yea {env:CI_PYTEST_SPLIT_ARGS:} --strict --shard tf21 run {posargs:--all}
-    func-s_tf24-py{36,37,38,39,310}: yea {env:CI_PYTEST_SPLIT_ARGS:} --strict --shard tf24 run {posargs:--all}
-    func-s_tf25-py{36,37,38,39,310}: yea {env:CI_PYTEST_SPLIT_ARGS:} --strict --shard tf25 run {posargs:--all}
-    func-s_tf26-py{36,37,38,39,310}: yea {env:CI_PYTEST_SPLIT_ARGS:} --strict --shard tf26 run {posargs:--all}
-    func-s_ray112-py{36,37,38,39,310}: yea {env:CI_PYTEST_SPLIT_ARGS:} --strict --shard ray112 run {posargs:--all}
-    func-s_ray2-py{36,37,38,39,310}: yea {env:CI_PYTEST_SPLIT_ARGS:} --strict --shard ray2 run {posargs:--all}
-    func-s_service-py{36,37,38,39,310}: yea {env:CI_PYTEST_SPLIT_ARGS:} --strict --shard service run {posargs:--all}
-    func-s_grpc-py{36,37,38,39,310}: yea {env:CI_PYTEST_SPLIT_ARGS:} --strict --shard grpc run {posargs:--all}
-    func-s_py310-py{36,37,38,39,310}: yea {env:CI_PYTEST_SPLIT_ARGS:} --strict --shard py310 run {posargs:--all}
-    func-s_docs-py{36,37,38,39,310}: yea {env:CI_PYTEST_SPLIT_ARGS:} --strict --yeadoc --shard docs run {posargs:--all}
-    func-s_imports1-py{36,37,38,39,310}: yea {env:CI_PYTEST_SPLIT_ARGS:} --strict --shard imports1 run {posargs:--all}
-    func-s_imports2-py{36,37,38,39,310}: yea {env:CI_PYTEST_SPLIT_ARGS:} --strict --shard imports2 run {posargs:--all}
-    func-s_imports3-py{36,37,38,39,310}: yea {env:CI_PYTEST_SPLIT_ARGS:} --strict --shard imports3 run {posargs:--all}
-    func-s_imports4-py{36,37,38,39,310}: yea {env:CI_PYTEST_SPLIT_ARGS:} --strict --shard imports4 run {posargs:--all}
-    func-s_imports5-py{36,37,38,39,310}: yea {env:CI_PYTEST_SPLIT_ARGS:} --strict --shard imports5 run {posargs:--all}
-    func-s_imports6-py{36,37,38,39,310}: yea {env:CI_PYTEST_SPLIT_ARGS:} --strict --shard imports6 run {posargs:--all}
-    func-s_imports7-py{36,37,38,39,310}: yea {env:CI_PYTEST_SPLIT_ARGS:} --strict --shard imports7 run {posargs:--all}
-    func-s_imports8-py{36,37,38,39,310}: yea {env:CI_PYTEST_SPLIT_ARGS:} --strict --shard imports8 run {posargs:--all}
-    func-s_imports9-py{36,37,38,39,310}: yea {env:CI_PYTEST_SPLIT_ARGS:} --strict --shard imports9 run {posargs:--all}
-    func-s_imports10-py{36,37,38,39,310}: yea {env:CI_PYTEST_SPLIT_ARGS:} --strict --shard imports10 run {posargs:--all}
-    func-s_imports11-py{36,37,38,39,310}: yea {env:CI_PYTEST_SPLIT_ARGS:} --strict --shard imports11 run {posargs:--all}
-    func-s_imports12-py{36,37,38,39,310}: yea {env:CI_PYTEST_SPLIT_ARGS:} --strict --shard imports12 run {posargs:--all}
-    func-s_noml-py{36,37,38,39,310}: yea {env:CI_PYTEST_SPLIT_ARGS:} --strict --shard noml run {posargs:--all}
+    func-s_base-py{37,38,39,310}: yea {env:CI_PYTEST_SPLIT_ARGS:} --strict --shard default run {posargs:--all}
+    func-s_sklearn-py{37,38,39,310}: yea {env:CI_PYTEST_SPLIT_ARGS:} --strict --shard sklearn run {posargs:--all}
+    func-s_metaflow-py{37,38,39,310}: yea {env:CI_PYTEST_SPLIT_ARGS:} --strict --shard metaflow run {posargs:--all}
+    func-s_tf115-py{37,38,39,310}: yea {env:CI_PYTEST_SPLIT_ARGS:} --strict --shard tf115 run {posargs:--all}
+    func-s_tf21-py{37,38,39,310}: yea {env:CI_PYTEST_SPLIT_ARGS:} --strict --shard tf21 run {posargs:--all}
+    func-s_tf24-py{37,38,39,310}: yea {env:CI_PYTEST_SPLIT_ARGS:} --strict --shard tf24 run {posargs:--all}
+    func-s_tf25-py{37,38,39,310}: yea {env:CI_PYTEST_SPLIT_ARGS:} --strict --shard tf25 run {posargs:--all}
+    func-s_tf26-py{37,38,39,310}: yea {env:CI_PYTEST_SPLIT_ARGS:} --strict --shard tf26 run {posargs:--all}
+    func-s_ray112-py{37,38,39,310}: yea {env:CI_PYTEST_SPLIT_ARGS:} --strict --shard ray112 run {posargs:--all}
+    func-s_ray2-py{37,38,39,310}: yea {env:CI_PYTEST_SPLIT_ARGS:} --strict --shard ray2 run {posargs:--all}
+    func-s_service-py{37,38,39,310}: yea {env:CI_PYTEST_SPLIT_ARGS:} --strict --shard service run {posargs:--all}
+    func-s_grpc-py{37,38,39,310}: yea {env:CI_PYTEST_SPLIT_ARGS:} --strict --shard grpc run {posargs:--all}
+    func-s_py310-py{37,38,39,310}: yea {env:CI_PYTEST_SPLIT_ARGS:} --strict --shard py310 run {posargs:--all}
+    func-s_docs-py{37,38,39,310}: yea {env:CI_PYTEST_SPLIT_ARGS:} --strict --yeadoc --shard docs run {posargs:--all}
+    func-s_imports1-py{37,38,39,310}: yea {env:CI_PYTEST_SPLIT_ARGS:} --strict --shard imports1 run {posargs:--all}
+    func-s_imports2-py{37,38,39,310}: yea {env:CI_PYTEST_SPLIT_ARGS:} --strict --shard imports2 run {posargs:--all}
+    func-s_imports3-py{37,38,39,310}: yea {env:CI_PYTEST_SPLIT_ARGS:} --strict --shard imports3 run {posargs:--all}
+    func-s_imports4-py{37,38,39,310}: yea {env:CI_PYTEST_SPLIT_ARGS:} --strict --shard imports4 run {posargs:--all}
+    func-s_imports5-py{37,38,39,310}: yea {env:CI_PYTEST_SPLIT_ARGS:} --strict --shard imports5 run {posargs:--all}
+    func-s_imports6-py{37,38,39,310}: yea {env:CI_PYTEST_SPLIT_ARGS:} --strict --shard imports6 run {posargs:--all}
+    func-s_imports7-py{37,38,39,310}: yea {env:CI_PYTEST_SPLIT_ARGS:} --strict --shard imports7 run {posargs:--all}
+    func-s_imports8-py{37,38,39,310}: yea {env:CI_PYTEST_SPLIT_ARGS:} --strict --shard imports8 run {posargs:--all}
+    func-s_imports9-py{37,38,39,310}: yea {env:CI_PYTEST_SPLIT_ARGS:} --strict --shard imports9 run {posargs:--all}
+    func-s_imports10-py{37,38,39,310}: yea {env:CI_PYTEST_SPLIT_ARGS:} --strict --shard imports10 run {posargs:--all}
+    func-s_imports11-py{37,38,39,310}: yea {env:CI_PYTEST_SPLIT_ARGS:} --strict --shard imports11 run {posargs:--all}
+    func-s_imports12-py{37,38,39,310}: yea {env:CI_PYTEST_SPLIT_ARGS:} --strict --shard imports12 run {posargs:--all}
+    func-s_noml-py{37,38,39,310}: yea {env:CI_PYTEST_SPLIT_ARGS:} --strict --shard noml run {posargs:--all}
     func-s_kfp-py{37}: yea {env:CI_PYTEST_SPLIT_ARGS:} --strict -p wandb:mockserver-bind=0.0.0.0 -p wandb:mockserver-host=__auto__ --shard kfp run {posargs:--all}
 
 [testenv:pod-store]
@@ -502,7 +502,7 @@ commands =
     coverage report --ignore-errors --skip-covered --include "wandb/*" --omit "wandb/vendor/*"
     codecov -e TOXENV -F functest
 
-[testenv:standalone-{cpu,gpu,tpu,local}-py{36,37,38,39,310}]
+[testenv:standalone-{cpu,gpu,tpu,local}-py{37,38,39,310}]
 install_command = pip install --extra-index-url https://download.pytorch.org/whl/cpu {opts} {packages}
 commands_pre =
 setenv =
@@ -516,7 +516,7 @@ passenv =
     WANDB_API_KEY
 deps =
     -r{toxinidir}/requirements.txt
-    standalone-{cpu,gpu,tpu,local}-py{36,37,38,39,310}: -r{toxinidir}/requirements_dev.txt
+    standalone-{cpu,gpu,tpu,local}-py{37,38,39,310}: -r{toxinidir}/requirements_dev.txt
     pytest-mock
     yea-wandb=={env:YEA_WANDB_VERSION}
 whitelist_externals =
@@ -528,7 +528,7 @@ whitelist_externals =
 commands =
     mkdir -p test-results
     wandb login --relogin {env:WANDB_API_KEY}
-    standalone-cpu-py{36,37,38,39,310}: yea --debug --strict -p wandb:mockserver-relay=true -p wandb:mockserver-relay-remote-base-url=https://api.wandb.ai --shard standalone-cpu run {posargs:--all}
-    standalone-gpu-py{36,37,38,39,310}: yea --debug --strict -p wandb:mockserver-relay=true -p wandb:mockserver-relay-remote-base-url=https://api.wandb.ai --shard standalone-gpu run {posargs:--all}
-    standalone-tpu-py{36,37,38,39,310}: yea --debug --strict -p wandb:mockserver-relay=true -p wandb:mockserver-relay-remote-base-url=https://api.wandb.ai --shard standalone-tpu run {posargs:--all}
-    standalone-local-py{36,37,38,39,310}: yea --debug --strict -p wandb:mockserver-bind=0.0.0.0 -p wandb:mockserver-host=__auto__ -p wandb:mockserver-relay=true -p wandb:mockserver-relay-remote-base-url=http://localhost:5000 --shard standalone-cpu run {posargs:--all}
+    standalone-cpu-py{37,38,39,310}: yea --debug --strict -p wandb:mockserver-relay=true -p wandb:mockserver-relay-remote-base-url=https://api.wandb.ai --shard standalone-cpu run {posargs:--all}
+    standalone-gpu-py{37,38,39,310}: yea --debug --strict -p wandb:mockserver-relay=true -p wandb:mockserver-relay-remote-base-url=https://api.wandb.ai --shard standalone-gpu run {posargs:--all}
+    standalone-tpu-py{37,38,39,310}: yea --debug --strict -p wandb:mockserver-relay=true -p wandb:mockserver-relay-remote-base-url=https://api.wandb.ai --shard standalone-tpu run {posargs:--all}
+    standalone-local-py{37,38,39,310}: yea --debug --strict -p wandb:mockserver-bind=0.0.0.0 -p wandb:mockserver-host=__auto__ -p wandb:mockserver-relay=true -p wandb:mockserver-relay-remote-base-url=http://localhost:5000 --shard standalone-cpu run {posargs:--all}
