chore(sdk): enable type checking for wandb_init.py

--- a/mypy.ini
+++ b/mypy.ini
@@ -188,7 +188,8 @@ disallow_untyped_calls = False
 ignore_errors = True
 
 [mypy-wandb.sdk.wandb_init]
-ignore_errors = True
+ignore_errors = False
+disallow_untyped_calls = False
 
 [mypy-wandb.sdk.wandb_login]
 ignore_errors = True
