try regressing on circle

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1263,17 +1263,16 @@ workflows:
       #
       # Regression tests
       #
-      -
-      #
-      # Linting
-      #
       - regression:
           python_version_major: [ 3 ]
           python_version_minor: [ 8 ]
           name: "lint-py<<matrix.python_version_major>><<matrix.python_version_minor>>"
-#          toxenv: "lint-py<<matrix.python_version_major>><<matrix.python_version_minor>>"
+          toxenv: "lint-py<<matrix.python_version_major>><<matrix.python_version_minor>>"
           context: slack-secrets
           notify_on_failure: false
+      #
+      # Linting
+      #
       - tox-base:
           name: "code-check"
           python_version_minor: 8
