--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -242,7 +242,7 @@ jobs:
       - image: "python:<<parameters.python_version_major>>.<<parameters.python_version_minor>>"
     parallelism: << parameters.parallelism >>
     resource_class: xlarge
-    working_directory: /mnt/ramdisk
+    working_directory: /mnt/ramdisk/wandb
     steps:
       - checkout
       - when:
@@ -261,6 +261,7 @@ jobs:
             - run:
                 name: Clone wandb/wandb-testing repo
                 command: |
+                  cd /mnt/ramdisk
                   git clone https://github.com/wandb/wandb-testing.git
 #            - run:
 #                name: Run tests
