install sdk into generate toxenv

--- a/tox.ini
+++ b/tox.ini
@@ -121,7 +121,7 @@ commands=
 
 [testenv:generate]
 basepython=python3
-skip_install = true
+skip_install = false
 deps = {[black]deps}
 commands=
     python tools{/}generate-tool.py --generate
