install sdk into generate toxenv

--- a/tox.ini
+++ b/tox.ini
@@ -114,7 +114,7 @@ commands=
 
 [testenv:generatecheck]
 basepython=python3
-skip_install = true
+skip_install = false
 deps = {[black]deps}
 commands=
     python tools{/}generate-tool.py --check
