--- a/tox.ini
+++ b/tox.ini
@@ -180,7 +180,7 @@ deps =
     flake8-fixme
     flake8-typing-imports>=1.1
 commands =
-    flake8 --append-config={toxinidir}/.flake8-base --extend-ignore=B028 --color=always {posargs}
+    flake8 --append-config={toxinidir}/.flake8-base --color=always {posargs}
 
 [testenv:docstrings]
 basepython=python3
@@ -189,7 +189,7 @@ deps =
     {[flake8base]deps}
     flake8-docstrings>=1.3.1
 commands =
-    flake8 --select D --append-config={toxinidir}/.flake8-docstrings --extend-ignore=B028 {posargs}
+    flake8 --select D --append-config={toxinidir}/.flake8-docstrings {posargs}
 
 [testenv:darglint]
 basepython=python3
@@ -198,7 +198,7 @@ deps =
     {[flake8base]deps}
     darglint>=1.8.0
 commands =
-    flake8 --append-config={toxinidir}/.flake8-darglint --extend-ignore=B028 {posargs}
+    flake8 --append-config={toxinidir}/.flake8-darglint {posargs}
 
 [testenv:pylint]
 basepython=python3
