--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -88,7 +88,7 @@ parameters:
     default: false
   wandb_server_tag:
     type: string
-    default: "master"
+    default: "annirudh-upsert-bucket-queue"
 
 commands:
   save-test-results:
@@ -1211,7 +1211,6 @@ workflows:
               python_version_minor: [6, 7, 8, 9, 10]
           name: "unit-s_base-lin-py<<matrix.python_version_major>><<matrix.python_version_minor>>"
           toxenv: "py<<matrix.python_version_major>><<matrix.python_version_minor>>,covercircle"
-          wandb_server_tag: "annirudh-upsert-bucket-queue"
       #
       # Unit tests with pytest on Linux, using the old mock server
       #
